objects/ssot__VoiceCall__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CallAcceptedDateTime__c</fullName>
        <label>Call Accepted DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CallConnectDateTime__c</fullName>
        <label>Call Connect DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CallDurationSecondsCount__c</fullName>
        <label>Call Duration In Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CallEndDateTime__c</fullName>
        <label>Call End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CallOriginType__c</fullName>
        <label>Call Origin Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CallQueuedDateTime__c</fullName>
        <label>Call Queued DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CallResolution__c</fullName>
        <label>Call Resolution</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CallStartDateTime__c</fullName>
        <label>Call Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CampaignId__c</fullName>
        <label>Campaign</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChannelEngagementId__c</fullName>
        <label>Channel Engagement</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChannelEngagementNumber__c</fullName>
        <label>Channel Engagement Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CoachingDrtnSecondsCount__c</fullName>
        <label>Coaching Duration In Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ContactCenterId__c</fullName>
        <label>Contact Center</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConversationId__c</fullName>
        <label>Conversation</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CountryRegion__c</fullName>
        <label>Country Region</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CustomerHoldDrtnSecondsCount__c</fullName>
        <label>Customer Hold Duration In Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceApplicationName__c</fullName>
        <label>Data Source Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSource__c</fullName>
        <label>Data Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisconnectReason__c</fullName>
        <label>Disconnect Reason</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelType__c</fullName>
        <label>Engagement Channel Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FlowElementId__c</fullName>
        <label>Flow Element</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FromPhoneNumber__c</fullName>
        <label>From Phone Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Voice Call Engagement Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsRecorded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Recorded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LongestHoldDrtnSecondsCount__c</fullName>
        <label>Longest Hold Duration In Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MarketAudienceId__c</fullName>
        <label>Market Audience</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketJourneyActivityId__c</fullName>
        <label>Market Journey Activity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketJourneyActivity__c</fullName>
        <label>Market Journey Activity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketSegmentId__c</fullName>
        <label>Market Segment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MessagePurpose__c</fullName>
        <label>Message Purpose</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NextVoiceCallId__c</fullName>
        <label>Next Voice Call</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NumberOfHoldsQuantity__c</fullName>
        <label>Number Of Holds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreviousVoiceCallId__c</fullName>
        <label>Previous Voice Call</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QueueName__c</fullName>
        <label>Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedToId__c</fullName>
        <label>Related To</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SoftwareApplication__c</fullName>
        <label>Software Application</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ToPhoneNumber__c</fullName>
        <label>To Phone Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VendorCallKeyText__c</fullName>
        <label>Vendor Call Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VendorParentCallKeyText__c</fullName>
        <label>Vendor Parent Call Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VoiceCallCostAmount__c</fullName>
        <label>Voice Call Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VoiceCallDisposition__c</fullName>
        <label>Voice Call Disposition</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VoiceCallType__c</fullName>
        <label>Voice Call Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VoiceCallVendorType__c</fullName>
        <label>Voice Call Vendor Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VoiceCall_RelatedToId_map_Account_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VoiceCall_RelatedToId_map_Account_Id_N_1</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>VoiceCall_RelatedToId_map_Account_Id_N_1</relationshipLabel>
        <relationshipName>VoiceCall_RelatedToId_map_Account_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__VoiceCall_RelatedToId_map_Case_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VoiceCall_RelatedToId_map_Case_Id_N_1</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>VoiceCall_RelatedToId_map_Case_Id_N_1</relationshipLabel>
        <relationshipName>VoiceCall_RelatedToId_map_Case_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__VoiceCall_RelatedToId_map_Lead_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VoiceCall_RelatedToId_map_Lead_Id_N_1</label>
        <referenceTo>ssot__Lead__dlm</referenceTo>
        <relationshipLabel>VoiceCall_RelatedToId_map_Lead_Id_N_1</relationshipLabel>
        <relationshipName>VoiceCall_RelatedToId_map_Lead_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__VoiceMessageText__c</fullName>
        <label>Voice Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WebSession__c</fullName>
        <label>Web Session</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726574073_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VoiceCall_MarketSegmentId_map_Market_rel</label>
        <referenceTo>ssot__MarketSegment__dlm</referenceTo>
        <relationshipLabel>VoiceCall_MarketSegmentId_map_Market_rel</relationshipLabel>
        <relationshipName>rel_1716726574073_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726577142_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VoiceCall_ConversationId_map_Convers_rel</label>
        <referenceTo>ssot__Conversation__dlm</referenceTo>
        <relationshipLabel>VoiceCall_ConversationId_map_Convers_rel</relationshipLabel>
        <relationshipName>rel_1716726577142_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726578817_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VoiceCall_FlowElementId_map_FlowElem_rel</label>
        <referenceTo>ssot__FlowElement__dlm</referenceTo>
        <relationshipLabel>VoiceCall_FlowElementId_map_FlowElem_rel</relationshipLabel>
        <relationshipName>rel_1716726578817_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>